---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 2025-04-11
  Changes:
    - Include assets from Krastorio 2 Assets directly into the mod and remove dependencies on asset mods
  Major Features:
    - Add compatibility for Voidcrafting Liquid fertilizer
---------------------------------------------------------------------------------------------------
Version: 1.5.1
  Compatibility:
    - When No Space Platforms is installed, Liquid fertilizer can be crafted anywhere
---------------------------------------------------------------------------------------------------
Version: 1.5.0
  Compatibility:
    - Update compatibility for Wooden Industry, changing dependent technology to Kiln Smelting from Alloy Smelting
---------------------------------------------------------------------------------------------------
Version: 1.4.0
  Changes:
    - Change Liquid fertilizer to only be craftable in space (or Muluna). Cerysian lunaponics is again, totally super different
    - Move Liquid fertilizer (ammoniacal) to Cerysian Lunaponics, since it's 100% different now, and always was
---------------------------------------------------------------------------------------------------
Version: 1.3.3
  Compatibility:
    - Add compatibility for Bioprocessing Group
  Bugfixes:
    - Change internal name of ammoniacal-liquid-fertilizer to liquid-fertilizer-ammoniacal
---------------------------------------------------------------------------------------------------
Version: 1.3.2
  Bugfixes:
    - Fix load order issue with Wooden Industry technology prerequisites
    - Add locale for Liquid fertilizer from ammonia
---------------------------------------------------------------------------------------------------
Version: 1.3.1
  Bugfixes:
    - Update asset dependency version