@@ -1,11 +1,14 @@
 {
   "name": "astroponics",
   "title": "Astroponics",
-  "description": "Adds a garden for you to grow wood in space!",
+  "description": "Adds a Space garden for growing wood in space.",
   "author": "SafTheLamb",
   "version": "1.6.1",
   "factorio_version": "2.0",
   "homepage": "https://github.com/SafTheLamb/fm-astroponics",
+  "package": {
+    "ignore": ["thumbnail.pdn", "**/*.afphoto", "**/*.ase", "**/*.afphoto~lock~", "**/*.pdn"]
+  },
   "dependencies": [
     "base >= 2.0.7",
     "fdsl >= 0.1.3",
