@@ -1,5 +1,0 @@
-{
-  "recipe":[
-    ["ammoniacal-liquid-fertilizer", "liquid-fertilizer-ammoniacal"]
-  ]
-}
