@@ -2,5 +2,7 @@ for _,force in pairs(game.forces) do
   local technologies = force.technologies
   local recipes = force.recipes
 
-  recipes["ice-melting"].enabled = technologies["astroponics"].researched
+  if technologies["astroponics"].researched then
+    recipes["ice-melting"].enabled = true
+  end
 end
