@@ -1,7 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.1
-Date: ????
+Date: 2025-04-14
   Changes:
+    - Exclude source assets from mod portal package
+    - Improve migrations code
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.0
 Date: 2025-04-11
